Revert "Test: black and white color scheme"
This reverts commit 39e3b3f93d16bb41060ae5e731056ed5256f8348.

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         }
 
         :root {
-            --dark: #0a0a0a;
-            --dark-blue: #0a0a0a;
-            --navy: #1a1a1a;
-            --accent: #ffffff;
-            --accent-light: #e0e0e0;
-            --orange: #cccccc;
-            --sunrise: #b0b0b0;
-            --white: #f5f5f5;
-            --gray: #888888;
-            --light-gray: #cccccc;
+            --dark: #0a0a12;
+            --dark-blue: #0d1321;
+            --navy: #1a1a2e;
+            --accent: #f5a623;
+            --accent-light: #ffd96a;
+            --orange: #e8753a;
+            --sunrise: #ff6b35;
+            --white: #f0f0f5;
+            --gray: #a0a0b8;
+            --light-gray: #cccce0;
             --card-bg: rgba(255, 255, 255, 0.04);
-            --card-border: rgba(255, 255, 255, 0.1);
+            --card-border: rgba(255, 255, 255, 0.08);
 
-            --bg: #0a0a0a;
-            --bg-warm: #0a0a0a;
+            --bg: #0a0a12;
+            --bg-warm: #0d1321;
             --bg-card: rgba(255, 255, 255, 0.04);
-            --text: #f5f5f5;
-            --text-light: #999999;
-            --text-muted: #666666;
+            --text: #f0f0f5;
+            --text-light: #a0a0b8;
+            --text-muted: #6b6b80;
         }
 
         html {
